--- a/cookbooks/pvlb/templates/default/nginx.conf.erb
+++ b/cookbooks/pvlb/templates/default/nginx.conf.erb
@@ -66,7 +66,7 @@ server {
 	listen 80;
 	server_name default;
 	location / {
-		root <%= node['pvlb']['nginx_html'] %>;
+		root /var/pvlb/html;
 	}
 	location /health {
 		proxy_pass http://127.0.0.1:<%= node['pvlb']['starting_port'] %>;
@@ -82,7 +82,7 @@ server {
 	listen 80;
 	server_name special_health_check_vhost;
 	location / {
-		root <%= node['pvlb']['nginx_html'] %>;
+		root /var/pvlb/html>;
 		try_files $uri $uri/ /health.txt;
 	}
 }
